Closed Bug 388910 Opened 17 years ago Closed 17 years ago

Building with disabled MOZ_XUL failed

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Build fix (obsolete) — Splinter Review
After landing https://bugzilla.mozilla.org/attachment.cgi?id=260753

Building in embedding-profile=minimal configuration was broken
Attachment #273086 - Flags: review?(surkov.alexander)
Comment on attachment 273086 [details] [diff] [review]
Build fix


>+#ifdef MOZ_XUL
>   nsCOMPtr<nsIXULDocument> xulDoc(do_QueryInterface(mDocument));
>   if (!xulDoc) {
>     // XXX Need to invent better check to see if doc is focusable,
>     // which it should be if it is scrollable. A XUL document could be focusable.
>     // See bug 376803.
>     *aState |= nsIAccessibleStates::STATE_FOCUSABLE;
>   }
>+#endif

if there is no XUL then we should set focusable state.
Attachment #273086 - Flags: review?(surkov.alexander) → review-
Assignee: aaronleventhal → romaxa
Attachment #273086 - Attachment is obsolete: true
Attachment #273233 - Flags: review?(surkov.alexander)
Comment on attachment 273233 [details] [diff] [review]
Rev2 Focusable state added

I think it's ok with me though asking Neil for sr to be sure :)

thank you for bug fixing.
Attachment #273233 - Flags: superreview?(neil)
Attachment #273233 - Flags: review?(surkov.alexander)
Attachment #273233 - Flags: review+
Attachment #273233 - Flags: superreview?(neil) → superreview+
checked in
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: