Bug 388910 - building with disabled MOZ_XUL failed, patch=romaxa@gmail.com, r=me, sr=neil